2014-01-29  Alexandre Oliva <aoliva@redhat.com>

	* manual/crypt.texi: Document MTASC-safety properties.

2014-01-29  Alexandre Oliva <aoliva@redhat.com>

	* manual/conf.texi: Document MTASC-safety properties.

2014-01-29  Alexandre Oliva <aoliva@redhat.com>

	* manual/arith.texi: Document MTASC-safety properties.

2014-01-29  Alexandre Oliva <aoliva@redhat.com>

	* manual/argp.texi: Document MTASC-safety properties.

2014-01-29  Alexandre Oliva <aoliva@redhat.com>

	* manual/macros.texi: Introduce macros to document multi
	thread, asynchronous signal and asynchronous cancellation
	safety properties.
	* manual/intro.texi: Introduce the properties themselves.

2014-01-27  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* sysdeps/sh/sh4/Makefile: New file.

2014-01-27  Andreas Schwab  <schwab@linux-m68k.org>

	* math/gen-libm-test.pl ($srcdir): New variable.
	($auto_input): Use it.

2014-01-27  Siddhesh Poyarekar  <siddhesh@redhat.com>

	[BZ #16506]
	* nss/nss_files/files-netgrp.c (_nss_files_setnetgrent): Avoid
	access beyond array bounds when parsing netgroups file.

	* nscd/netgroupcache.c (addgetnetgrentX): Compute offset from
	the old buffer before realloc.

2014-01-27  Allan McRae  <allan@archlinux.org>

	* po/fr.po: Update French translation from translation project.

2014-01-26  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* sysdeps/sh/libm-test-ulps: Regenerate.

2014-01-24  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/fpu/libm-test-ulps: Regenerate.

2014-01-25  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* sysdeps/sh/sh4/fpu/libm-test-ulps: Move to ...
	* sysdeps/sh/libm-test-ulps: ... here and regenerated.

2013-01-24  Siddhesh Poyarekar  <siddhesh@redhat.com>

	[BZ #16474]
	* nscd/netgroupcache.c (addgetnetgrentX): Adjust triplet
	string pointers after reallocation.

2014-01-24  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* sysdeps/unix/sysv/linux/sh/sys/ucontext.h: Use __SH4__ and
	__SH4A__ instead of __SH_FPU_ANY__.

2014-01-23  Kaz Kojima  <kkojima@rr.iij4u.or.jp>