@@ -1,3 +1,7 @@
+2014-01-22  Marcus Shawcroft  <marcus.shawcroft@arm.com>
+
+	* sysdeps/aarch64/libm-test-ulps: Regenerated.
+
 2014-01-20  Marcus Shawcroft  <marcus.shawcroft@linaro.org>
 
 	* sysdeps/unix/sysv/linux/aarch64/Makefile (abi-lp64_be-options): Fix
