@@ -20,48 +20,48 @@
    jmp_buf!
 
 
-  	offset:	description:
+	offset:	description:
 	-------	------------
-  	0x000	stack pointer (r12)	; unchangeable (see _JMPBUF_UNWINDS)
-  	0x008	r1 (gp)
+	0x000	stack pointer (r12)	; unchangeable (see _JMPBUF_UNWINDS)
+	0x008	r1 (gp)
 	0x010	caller's unat
 	0x018	fpsr			; disabled per the C standard; BZ 16379
-  	0x020	r4
-  	0x028	r5
-  	0x030	r6
-  	0x038	r7
-  	0x040	rp (b0)
-  	0x048	b1
-  	0x050	b2
-  	0x058	b3
-  	0x060	b4
-  	0x068	b5
-  	0x070	ar.pfs
-  	0x078	ar.lc
-  	0x080	pr
-  	0x088	ar.bsp			; unchangeable (see __longjmp.S)
-  	0x090	ar.unat
+	0x020	r4
+	0x028	r5
+	0x030	r6
+	0x038	r7
+	0x040	rp (b0)
+	0x048	b1
+	0x050	b2
+	0x058	b3
+	0x060	b4
+	0x068	b5
+	0x070	ar.pfs
+	0x078	ar.lc
+	0x080	pr
+	0x088	ar.bsp			; unchangeable (see __longjmp.S)
+	0x090	ar.unat
 	0x098	&__jmp_buf	; address of the jmpbuf (needed to locate NaT bits in unat)
 	0x0a0	 f2
 	0x0b0	 f3
 	0x0c0	 f4
 	0x0d0	 f5
 	0x0e0	f16
-  	0x0f0	f17
-  	0x100	f18
-  	0x110	f19
-  	0x120	f20
-  	0x130	f21
-  	0x130	f22
-  	0x140	f23
-  	0x150	f24
-  	0x160	f25
-  	0x170	f26
-  	0x180	f27
-  	0x190	f28
-  	0x1a0	f29
-  	0x1b0	f30
-  	0x1c0	f31 */
+	0x0f0	f17
+	0x100	f18
+	0x110	f19
+	0x120	f20
+	0x130	f21
+	0x130	f22
+	0x140	f23
+	0x150	f24
+	0x160	f25
+	0x170	f26
+	0x180	f27
+	0x190	f28
+	0x1a0	f29
+	0x1b0	f30
+	0x1c0	f31 */
 
 #include <sysdep.h>
 #include <features.h>
